--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,22 +11,30 @@
     
     <p>
         {% blocktrans %}
-		<b>Condottieri</b> is a gaming site to play the Avalon Hill's classic
-		strategy game <b>Machiavelli</b>.
+		<b>Condottieri</b> is a gaming site to play the Avalon Hill's classic strategy game <b>Machiavelli</b>.
         {% endblocktrans %}
     </p>
+	<p>
+		{% blocktrans %}
+		This is only a fan, non-profit oriented, site that is in no way affiliated with Avalon Hill.
+		{% endblocktrans %}
+	</p>
     <h2>{% trans "About this project" %}</h2>
-    
     <p>
         {% blocktrans %}
-		<b>Condottieri</b> has been developed on Django and Pinax.
+		<b>Condottieri</b> is being developed on Django, Pinax and, of course, Python.
         {% endblocktrans %}
     </p>
+	<p>
+		{% blocktrans %}
+		This project is in <i>beta</i> status, so it can have (sure it has) errors. Hopefully these errors will be fixed as soon as they are detected.
+		{% endblocktrans %}
+	</p>
     
     <hr />
     
     <p>
-        We are currently in active development. If you would like to receive a
+        <b>Condottieri</b> is currently under active development. If you would like to receive a
         beta code for this please give us your e-mail address below
     </p>
     
