added links to homepage.html

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,7 +22,9 @@
     <h2>{% trans "About this project" %}</h2>
     <p>
         {% blocktrans %}
-		<b>Condottieri</b> is being developed on Django, Pinax and, of course, Python.
+		<b>Condottieri</b> is being developed on <a href="http://djangoproject.com">Django</a>,
+		<a href="http://pinaxproject.com">Pinax</a> and, of course,
+		<a href="http://www.python.org">Python</a>.
         {% endblocktrans %}
     </p>
 	<p>
