--- a/templates/about/what_next.html
+++ b/templates/about/what_next.html
@@ -6,23 +6,27 @@
 {% block head_title %}{% trans "What Next?" %}{% endblock %}
 
 {% block body %}
-    <h1>{% trans "What Next?" %}</h1>
-    
     {% if user.is_authenticated %}
-        <p>Here are some things to do to get started with this site:</p>
+    	<p>
+		{% blocktrans %}If you want to start playing, go to{% endblocktrans %}
+		<a href="{% url game-list %}">{% trans "the game list" %}</a>
+		</p>
+        <p>
+		{% blocktrans %}However, there are some things that you may want to do before:{% endblocktrans %}
+		</p>
         
         <dl class="what_next">
-            <dt><a href="{% url acct_email %}">verify an email address</a></dt>
-            <dd>so you can receive notifications, reset your password and so people can find you more easily.</dd>
+            <dt><a href="{% url acct_email %}">{% trans "verify an email address"%}</a></dt>
+            <dd>{% blocktrans %}so you can receive notifications, reset your password and so people can find you more easily.{% endblocktrans %}</dd>
             
-            <dt><a href="{% url profile_detail user %}">fill out your profile</a></dt>
-            <dd>to tell the world a little about yourself.</dd>
+            <dt><a href="{% url profile_detail user %}">{%trans "fill out your profile" %}</a></dt>
+            <dd>{% blocktrans %}to tell the world a little about yourself.{% endblocktrans %}</dd>
             
             {% ifsetting ACCOUNT_OPEN_SIGNUP %}
             {% else %}
                 {% if user.is_staff %}
-                    <dt><a href="{% url admin_invite_user %}">invite more people to the site</a> [admin only]</dt>
-                    <dd>so more people can share in the fun.</dd>
+                    <dt><a href="{% url admin_invite_user %}">{% trans "invite more people to the site" %}</a> [{% trans "admin only" %}]</dt>
+                    <dd>{% blocktrans %}so more people can share in the fun.{% endblocktrans %}</dd>
                 {% endif %}
             {% endifsetting %}
         </dl>
