added empty-map.jpg to static images

--- a/machiavelli/templates/machiavelli/base.html
+++ b/machiavelli/templates/machiavelli/base.html
@@ -8,6 +8,7 @@
 
 {% block subnav %}
 	<ul>
+		<li><a href="{{ STATIC_URL }}machiavelli/img/empty-map.jpg" target="_blank">Mapa</a></li>
 		<li><a href="{% url game-list %}">{% trans "All games" %}</a></li>
 		<li><a href="{% url hall-of-fame %}">{% trans "Hall of Fame" %}</a></li>
 	</ul>
