added twitter info in homepage.html

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -19,6 +19,10 @@
 		This is only a fan, non-profit oriented, site that is in no way affiliated with Avalon Hill.
 		{% endblocktrans %}
 	</p>
+	<h3>{% trans "Follow Condottieri in Twitter" %}</h3>
+	<p>
+		{% blocktrans %}You can get news, updates and game messages in <a href="http://twitter.com/condottierigame">twitter</a>!{% endblocktrans %}
+	</p>
     <h2>{% trans "About this project" %}</h2>
     <p>
         {% blocktrans %}
