--- a/machiavelli/templates/machiavelli/base.html
+++ b/machiavelli/templates/machiavelli/base.html
@@ -9,7 +9,7 @@
 {% block subnav %}
 	<ul>
 		<li><a href="{% url faq %}">{% trans "FAQ" %}</a></li>
-		<li><a href="{{ STATIC_URL }}machiavelli/img/empty-map.jpg" target="_blank">{% trans "Map" %}</a></li>
+		<li><a href="{{ STATIC_URL }}machiavelli/img/{% trans "empty-map_en.jpg" %}" target="_blank">{% trans "Map" %}</a></li>
 		<li><a href="{% url game-list %}">{% trans "All games" %}</a></li>
 		<li><a href="{% url hall-of-fame %}">{% trans "Hall of Fame" %}</a></li>
 	</ul>
