separated your games and other games in game list

--- a/machiavelli/templates/machiavelli/game_list.html
+++ b/machiavelli/templates/machiavelli/game_list.html
@@ -9,7 +9,7 @@
 <p>{% blocktrans %}This is a list of all the games in this server. The first are the ones that you
 are a player in. If a game has empty slots, you can join it. If you can't find any available games,
 you can also create one, but it's better if you join an existing game.{% endblocktrans %}</p>
-
+<h2>{% trans "Your games" %}</h2>
 <table>
 	<thead>
 	<tr>
@@ -29,6 +29,22 @@ you can also create one, but it's better if you join an existing game.{% endbloc
 		<td>{{ game.slots }}</td>
 	</tr>
 	{% endfor %}
+</table>
+<p><a href="{% url new-game %}">{% trans "New game" %}</a></p>
+<h2>{% trans "Games you are not playing" %}</h2>
+<table>
+	<thead>
+	<tr>
+	<th>{% trans "Game" %}</th>
+	<th>{% trans "Scenario" %}</th>
+	<th>{% trans "Creator" %}</th>
+	<th>{% trans "Time limit" %}</th>
+	<th>{% trans "Year" %}</th>
+	<th>{% trans "Season" %}</th>
+	<th>{% trans "Phase" %}</th>
+	<th>{% trans "Slots" %}</th>
+	</tr>
+	</thead>
 	{% for game in other_games %}
 	<tr>
 		{% include 'machiavelli/game_row_inc.html' %}
