--- a/machiavelli/templates/machiavelli/game_row_inc.html
+++ b/machiavelli/templates/machiavelli/game_row_inc.html
@@ -1,7 +1,15 @@
 		<td><a href="{{ game.get_absolute_url }}">{{ game.slug }}</a></td>
 		<td>{{ game.scenario.title }}</td>
-		<td>{{ game.created_by }}
+		<td>{{ game.created_by }}</td>
 		<td>{{ game.get_time_limit_display }}</td>
-		<td class="data_c">{{ game.year }}</td>
-		<td class="data_c">{{ game.get_season_display }}</td>
+		<td class="data_c">
+		{% if game.year %}
+			{{ game.year }}
+		{% endif %}
+		</td>
+		<td class="data_c">
+		{% if game.season %}
+			{{ game.get_season_display }}
+		{% endif %}
+		</td>
 		<td class="data_c">{{ game.get_phase_display }}</td>
