--- a/machiavelli/templates/machiavelli/base.html
+++ b/machiavelli/templates/machiavelli/base.html
@@ -4,6 +4,7 @@
 
 {% block extra_head %}{% endblock %}
 
+{% block body_class %}machiavelli{% endblock %}
 {% block rtab_id %}id="machiavelli_tab"{% endblock %}
 
 {% block subnav %}
