--- a/site_media/static/css/site_tabs.css
+++ b/site_media/static/css/site_tabs.css
@@ -12,7 +12,7 @@ body.notices #tab_notices
 {
     margin: 0; /* to compensate for border */
     padding: 5px 0 5px;
-    background-color: #DEF; /* selected tab colour */
+    background-color: #DDD; /* selected tab colour */
     border-left: 1px solid #000; /* tab border */
     border-top: 1px solid #000; /* tab border */
     border-right: 1px solid #000; /* tab border */
