--- a/site_media/static/pinax/css/tabs.css
+++ b/site_media/static/pinax/css/tabs.css
@@ -12,7 +12,7 @@
 }
 
 ul.tabs a, ul.tabs a:visited {
-    color: #666; /* unselected tab text colour */
+    color: #ddd; /* unselected tab text colour */
     font-weight: bold;
     text-decoration: none;
 }
