--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -8,12 +8,16 @@
 <div id="game_info">
 <ul>
 <li>{% trans "Game" %}: {{ game.slug }}</li>
-<li>{% trans "Year" %}: {{ game.year }}</li>
-<li>{% trans "Season" %}: {{ game.get_season_display }}</li>
+<li>{% trans "Year" %}: {{ game.year|default_if_none:"" }}</li>
+<li>{% trans "Season" %}: {{ game.get_season_display|default_if_none:"" }}</li>
 <li>{% trans "Phase" %}: {{ game.get_phase_display }}</li>
 <li>{% trans "Time left" %}: {{ game.next_phase_change|timeuntil }}</li>
 {% if player %}
-<li>{% trans "Power" %}: {% trans player.country %}</li>
+<li>{% trans "Power" %}:
+	{% if player.country %}
+		{% trans player.country %}
+	{% endif %}
+</li>
 {% endif %}
 </ul>
 </div>
