--- a/site_media/static/machiavelli/css/game.css
+++ b/site_media/static/machiavelli/css/game.css
@@ -2,6 +2,20 @@
 	clear: both;
 }
 
+tr.open_game {
+	background: #c4efc2;
+	color: #333;
+}
+
+tr.closed_game {
+	background: #efc2c2;
+	color: #333;
+}
+
+tr.open_game a,
+tr.closed_game a{
+	color: #111;
+}
 
 #game_info {
 	width: 95%;
