changed copyright notice

--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -35,7 +35,7 @@
 
 {% block footer %}
 <div class="legal">
-    {% trans "&copy; 2010 Jos&eacute; Antonio Mart&iacute;n Prieto" %}
+    {% trans "&copy; 2010 J. A. Mart&iacute;n Prieto" %}
     - <a href="{% url about %}">{% trans "About" %}</a>
     - <a href="{% url terms %}">{% trans "Terms of Service" %}</a>
     - <a href="{% url privacy %}">{% trans "Privacy Policy" %}</a>
