--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -2,7 +2,8 @@
 
 {% load i18n %}
 
-{% block rtab_id %}id="account_tab"{% endblock %}
+{% block body_class %}account{% endblock %}
+
 
 {% block subnav %}
     {% if user.is_authenticated %}
