changed some notices texts and translated email_body.txt template

--- a/templates/notification/game_over/notice.html
+++ b/templates/notification/game_over/notice.html
@@ -1,4 +1,4 @@
 {% load i18n %}
 
 {% blocktrans with game.slug as slug %}The game '{{ slug }}' has is over. You can {% endblocktrans %}
-<a href="{{ current_site }}{% url show-game game.id %}">{% trans "see the results" %}</a>.
+<a href="{% url show-game game.id %}">{% trans "see the results" %}</a>.
