--- a/site_media/static/machiavelli/css/game.css
+++ b/site_media/static/machiavelli/css/game.css
@@ -188,7 +188,7 @@ tr.closed_game a{
 #log li {
 	list-style-type: none;
 	margin-left: 0;
-	padding-left: 0.5em;
+	padding: 0.2em 0.5em;
 	border-top: solid 1px #111;
 }
 
