--- a/site_media/static/machiavelli/css/game.css
+++ b/site_media/static/machiavelli/css/game.css
@@ -148,15 +148,15 @@ tr.closed_game a{
  * 3:Fall
  */
 .season_1 {
-	background: #80CD8D;
+	background-color: #80CD8D;
 	color: #000;
 }
 .season_2 {
-	background: #FFCC00;
+	background-color: #FFCC00;
 	color: #000;
 }
 .season_3 {
-	background: #B47D5B;
+	background-color: #B47D5B;
 	color: #000;
 }
 
@@ -184,12 +184,65 @@ tr.closed_game a{
 	padding-left: 0;
 }
 
-#diplomacy li,
-#log li {
+#diplomacy li {
 	list-style-type: none;
 	margin-left: 0;
 	padding: 0.2em 0.5em;
 	border-top: solid 1px #111;
+}
+
+#log li {
+	list-style-type: none;
+	min-height: 28px;
+	margin-left: 0;
+	padding: 0.2em 30px;
+	border-top: solid 1px #111;
+	background-position: left center;
+	background-repeat: no-repeat;
+}
+
+#log li.besieging-event {
+	background-image: url('../img/besieging-event.png');
+}
+
+#log li.broken-support-event {
+	background-image: url('../img/broken-support-event.png');
+}
+
+#log li.control-event {
+	background-image: url('../img/control-event.png');
+}
+
+#log li.conversion-event {
+	background-image: url('../img/conversion-event.png');
+}
+
+#log li.disband-event {
+	background-image: url('../img/disband-event.png');
+}
+
+#log li.movement-event {
+	background-image: url('../img/movement-event.png');
+}
+
+#log li.new-unit-event {
+	background-image: url('../img/new-unit-event.png');
+}
+
+#log li.order-event {
+	background-image: url('../img/order-event.png');
+}
+
+#log li.retreat-event {
+	background-image: url('../img/retreat-event.png');
+}
+
+#log li.standoff-event {
+	background-image: url('../img/standoff-event.png');
+}
+
+#log li.surrender-event {
+	background-image: url('../img/surrender-event.png');
 }
 
 #diplomacy a {
