--- a/machiavelli/templates/machiavelli/faq.html
+++ b/machiavelli/templates/machiavelli/faq.html
@@ -23,4 +23,9 @@
 	</ul>
 	</dd>
 </dl>
+<h2>{% trans "The karma system" %}</h2>
+<p>{% blocktrans %}Beside your user name, there should be a number. This is your karma score. This score measures the amount of time that you use to take to make your actions in a game. The higher the score, the faster you are as a player. Usually, other players will prefer a fast player. A new user starts with an average karma of 100.{% endblocktrans %}</p>
+<p>{% blocktrans %}The time that you have to complete your actions depends on your karma score. You have more time when your karma is over 100, and less time if it's under 100. However, if there is a player with more karma than you and he has not made his actions yet, you can always complete your actions before he does, even if your time is over (note that if this player makes his actions before you, you could have no time to make yours).{% endblocktrans %}</p>
+<p>{% blocktrans %}Whenever a phase change is forced, if you have not made your actions, you will lose karma (10 points).{% endblocktrans %}</p>
+<p>{% blocktrans %}To increase your karma, you must be fast making your actions. If you make your actions in the first fifth part of the time limit (e.g. 9.6 hours in a 48 hours game), you'll get 1 point of karma. Note that it's much easier losing karma than increasing it.{% endblocktrans %}</p>
 {% endblock %}
