--- a/machiavelli/templates/machiavelli/letter_detail.html
+++ b/machiavelli/templates/machiavelli/letter_detail.html
@@ -5,6 +5,15 @@
 {% block head_title %}{% trans "Inbox" %}{% endblock %}
 
 {% block body %}
+<div id="game_info">
+<ul>
+<li>{% trans "Year" %}: {{ game.year }}</li>
+<li>{% trans "Season" %}: {{ game.get_season_display }}</li>
+<li>{% trans "Phase" %}: {{ game.get_phase_display }}</li>
+<li>{% trans "Time left" %}: {{ game.next_phase_change|timeuntil }}</li>
+<li>{% trans "Power" %}: {{ player.country }}</li>
+</ul>
+</div>
 <h1>{% trans "Letter" %}</h1>
 
 <dl>
@@ -15,5 +24,5 @@
 <dt>{% trans "Body" %}:<dt>
 <dd>{{ letter.body }}</dd>
 </dl>
-
+<p><a href="{% url show-game game.id %}">{% trans "Return to game" %}</a></p>
 {% endblock %}
