--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -33,6 +33,15 @@
     {% endif %}
 {% endblock %}
 
+{% block subnav %}
+	<ul>
+		<li><a href="{% url faq %}">{% trans "FAQ" %}</a></li>
+		<li><a href="{{ STATIC_URL }}machiavelli/img/{% trans "empty-map_en.jpg" %}" target="_blank">{% trans "Map" %}</a></li>
+		<li><a href="{% url game-list %}">{% trans "All games" %}</a></li>
+		<li><a href="{% url hall-of-fame %}">{% trans "Hall of Fame" %}</a></li>
+	</ul>
+{% endblock %}
+
 {% block footer %}
 <div class="legal">
     {% trans "&copy; 2010 J. A. Mart&iacute;n Prieto" %}
