--- a/machiavelli/templates/machiavelli/phase_2.html
+++ b/machiavelli/templates/machiavelli/phase_2.html
@@ -4,6 +4,12 @@
 {% if done %}
 <p>{% blocktrans %}At least one player has not yet sent his orders. You have to wait until all
 players have done it or the time limit is reached.{% endblocktrans %}</p>
+<p>{% blocktrans %}These are the valid orders (except Hold orders) that you have sent this turn:{% endblocktrans %}</p>
+<ul>
+{% for o in orders %}
+<li>{{ o.get_message }}</li>
+{% endfor %}
+</ul>
 {% else %}
 <script type="text/javascript" src="{{ STATIC_URL }}machiavelli/js/orders_form.js"></script>
 <p>{% blocktrans %}
