added number of units to player data in show_game template

--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -40,6 +40,7 @@
 	{% endifequal %}
 	</div>
 	<div>{% trans "Cities:" %} {{ p.number_of_cities }}</div>
+	<div>{% trans "Units:" %} {{ p.number_of_units }}</div>
 {% if player %}
 	{% ifnotequal game.phase 0 %}
 	{% ifnotequal p player %}
