disabled waiting list form in home page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -51,8 +51,7 @@
 	<li>{% blocktrans %}Some events are posted to {% endblocktrans %}<a href="http://twitter.com/condottierigame">twitter</a></li>
 	</ul>
 
-{% if request.user.is_authenticated %}
-{% else %}
+{% if False %}
 	<h2>{% trans "Invitation codes" %}</h2>
     <p>
         {% blocktrans %}<b>Condottieri</b> is currently under active development. If you would like to receive a
