added metatags to site_base.html

--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}css/site_tabs.css" />
 	<link rel="stylesheet" href="{{ STATIC_URL }}machiavelli/css/game.css" />
 	<link rel="shortcut icon" href="/favicon.ico" />
+	<meta name="Title" content="Condottieri - Multiplayer Game of War, Politics and Treachery">
+	<meta name="Author" content="Jose Antonio Martin">
+	<meta name="Subject" content="Online Machiavelli game">
+	<meta name="Description" content="Online version of the classic game Machiavelli">
+	<meta name="Keywords" content="machiavelli, diplomacy, online, multiplayer, game, turn-based, juego, multijugador, diplomacia">
+	<meta name="Distribution" content="Global">
     {% block extra_head %}{% endblock %}
 {% endblock %}
 
