--- a/machiavelli/templates/machiavelli/game_results.html
+++ b/machiavelli/templates/machiavelli/game_results.html
@@ -27,5 +27,8 @@
 	{% endfor %}
 
 </table>
+{% if show_log %}
+<p><a href="{% url game-log game.id %}">{% trans "Campaign log" %}</a></p>
+{% endif %}
 <p><a href="{{ STATIC_URL }}machiavelli/maps/{{ map }}">{% trans "Map" %}</a>.</p>
 {% endblock %}
