--- a/media/css/site_tabs.css
+++ b/media/css/site_tabs.css
@@ -2,13 +2,15 @@
 
 body.machiavelli #tab_machiavelli a,
 body.profile #tab_profile a,
-body.notices #tab_notices a
+body.notices #tab_notices a,
+body.forum #tab_forum a
 {
     color: #000; /* selected tab text colour */
 }
 body.machiavelli #tab_machiavelli,
 body.profile #tab_profile,
-body.notices #tab_notices
+body.notices #tab_notices,
+body.forum #tab_forum
 {
     margin: 0; /* to compensate for border */
     padding: 5px 0 5px;
