--- a/site_media/static/pinax/css/base.css
+++ b/site_media/static/pinax/css/base.css
@@ -58,7 +58,8 @@ h1 {
     clear: both;
     margin: 0 auto;
     padding: 10px;
-    width: 1024px;
+    width: 90%;
+	min-width: 1024px;
 	background: #303030;
 	border: 3px solid #444;
 	border-top: none;
