added new game link to subnav

--- a/machiavelli/templates/machiavelli/base.html
+++ b/machiavelli/templates/machiavelli/base.html
@@ -11,6 +11,7 @@
 	<ul>
 		<li><a href="{% url faq %}">{% trans "FAQ" %}</a></li>
 		<li><a href="{{ STATIC_URL }}machiavelli/img/{% trans "empty-map_en.jpg" %}" target="_blank">{% trans "Map" %}</a></li>
+		<li><a href="{% url new-game %}">{% trans "New game" %}</a></li> 
 		<li><a href="{% url game-list %}">{% trans "All games" %}</a></li>
 		<li><a href="{% url hall-of-fame %}">{% trans "Hall of Fame" %}</a></li>
 	</ul>
