--- a/machiavelli/templates/machiavelli/game_row_inc.html
+++ b/machiavelli/templates/machiavelli/game_row_inc.html
@@ -1,5 +1,5 @@
 		<td><a href="{{ game.get_absolute_url }}">{{ game.slug }}</a></td>
-		<td>{{ game.scenario.title }}</td>
+		<td><a href="{% url show-scenario game.scenario.pk %}">{{ game.scenario.title }}</a></td>
 		<td>{{ game.created_by }}</td>
 		<td>{{ game.get_time_limit_display }}</td>
 		<td class="data_c">
