--- a/machiavelli/templates/machiavelli/phase_1.html
+++ b/machiavelli/templates/machiavelli/phase_1.html
@@ -31,9 +31,35 @@ players have done it or the time limit is reached.{% endblocktrans %}</p>
 </ul>
 <div class="action_form">
 <p>{{ reinforce_form.non_form_errors }}</p>
-<table style="width: 30%">
-{{ reinforce_form }}
+{{ reinforce_form.management_form }}
+
+{# Taken from http://djangosnippets.org/snippets/1442/ #}
+<table style="width: 40%; min-width: 30em;">
+{% for form in reinforce_form.forms %}
+	{% if forloop.first %}
+	<thead><tr>
+		{% for field in form.visible_fields %}
+		<th>{{ field.label|capfirst }}</th>
+		{% endfor %}
+	</tr></thead>
+	{% endif %}
+	<tr>
+	{% for field in form.visible_fields %}
+		<td>
+		{% if forloop.first %}
+			{% for hidden in form.hidden_fields %}
+			{{ hidden }}
+			{% endfor %}
+		{% endif %}
+			{{ field.errors.as_ul }}
+			{{ field }}
+		</td>
+	{% endfor %}
+	</tr>
+{% endfor %}
 </table>
+
+
 <p><input type="submit" value="{% trans "Reinforce" %}" /></p>
 </div>
 {% endif %}
@@ -44,9 +70,10 @@ players have done it or the time limit is reached.{% endblocktrans %}</p>
 {% endblocktrans %}</p>
 
 <p>{{ disband_form.non_form_errors }}</p>
-<table>
-{{ disband_form }}
-</table>
+<dl>
+<dt>{{ disband_form.units.label }}:</dt>
+<dd>{{ disband_form.units }}</dd>
+</dl>
 <p><input type="submit" value="{% trans "Disband!" %}"/></p>
 {% endif %}
 
