--- a/templates/notification/lost_player/notice.html
+++ b/templates/notification/lost_player/notice.html
@@ -2,4 +2,4 @@
 
 <p>{% blocktrans with game.slug as slug %}You have been overthrown in game '{{ slug }}'.{% endblocktrans %}</p>
 
-<p><a href="{% url show-game game.id %}">{% trans "Go to the game" %}</a></p>
+<p><a href="{% url show-game game.slug %}">{% trans "Go to the game" %}</a></p>
