--- a/machiavelli/templates/machiavelli/phase_1.html
+++ b/machiavelli/templates/machiavelli/phase_1.html
@@ -16,7 +16,7 @@ players have done it or the time limit is reached.{% endblocktrans %}</p>
 {% plural %} and {{ cur_units }} units.
 {% endblocktrans %}</p>
 
-<form action="{% url show-game game.id %}" method="post">
+<form action="{% url show-game game.slug %}" method="post">
 
 {% if reinforce_form %}
 <p>{% blocktrans count units_to_place as counter %} You have to place <b>{{ units_to_place }}</b> unit in the map.
