--- a/machiavelli/templates/machiavelli/phase_2.html
+++ b/machiavelli/templates/machiavelli/phase_2.html
@@ -19,7 +19,7 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 <p>{% blocktrans %}If you compose an order that break the rules, you should see an error and you will have to fix the order. However, if you compose an impossible order, this unit will hold, instead of carrying out its order. Be careful.{% endblocktrans %}</p>
 <div class="action_form">
 <p>{{ orders_formset.non_form_errors}}</p>
-<form action="{% url show-game game.id %}" method="post">
+<form action="{% url show-game game.slug %}" method="post">
 <table>
 <tr>
 <th style="width: 12%">{% trans "Unit" %}</th>
