corrected boxes links in show_game.html

--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -77,8 +77,8 @@ the page in a few seconds.{% endblocktrans %}
 </ul>
 </div>
 <div class="menu">
-<p><a href="{% url inbox game.id %}">{% trans "Inbox" %}</a> |
-<a href="{% url outbox game.id %}">{% trans "Outbox" %}</a></p>
+<p><a href="{% url inbox game.slug %}">{% trans "Inbox" %}</a> |
+<a href="{% url outbox game.slug %}">{% trans "Outbox" %}</a></p>
 </div>
 
 <div id="log">
