changed the way that letter boxes are shown

--- a/machiavelli/templates/machiavelli/letter_detail.html
+++ b/machiavelli/templates/machiavelli/letter_detail.html
@@ -28,5 +28,5 @@
 <dt>{% trans "Body" %}:<dt>
 <dd>{{ letter.body }}</dd>
 </dl>
-<p><a href="{% url show-game game.id %}">{% trans "Return to game" %}</a></p>
+<p><a href="{% url show-game game.slug %}">{% trans "Return to game" %}</a></p>
 {% endblock %}
