--- a/machiavelli/templates/machiavelli/letter_box.html
+++ b/machiavelli/templates/machiavelli/letter_box.html
@@ -1,27 +1,16 @@
-{% extends 'machiavelli/base.html' %}
+{% extends 'machiavelli/show_game.html' %}
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Inbox" %}{% endblock %}
-
-{% block body %}
-<div id="game_info">
-<ul>
-<li>{% trans "Year" %}: {{ game.year }}</li>
-<li>{% trans "Season" %}: {{ game.get_season_display }}</li>
-<li>{% trans "Phase" %}: {{ game.get_phase_display }}</li>
-<li>{% trans "Time left" %}: {{ game.next_phase_change|timeuntil }}</li>
-<li>{% trans "Power" %}: {{ player.country }}</li>
-</ul>
-</div>
-<h1>
+{% block actions %}
+<h2>
 {% ifequal box 'inbox' %}
 {% trans "Received letters" %}
 {% endifequal %}
 {% ifequal box 'outbox' %}
 {% trans "Sent letters" %}
 {% endifequal %}
-</h1>
+</h2>
 
 <div class="pagination">
 	<span class="step-links">
