--- a/machiavelli/templates/machiavelli/letter_detail.html
+++ b/machiavelli/templates/machiavelli/letter_detail.html
@@ -1,20 +1,9 @@
-{% extends 'machiavelli/base.html' %}
+{% extends 'machiavelli/show_game.html' %}
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Inbox" %}{% endblock %}
-
-{% block body %}
-<div id="game_info">
-<ul>
-<li>{% trans "Year" %}: {{ game.year }}</li>
-<li>{% trans "Season" %}: {{ game.get_season_display }}</li>
-<li>{% trans "Phase" %}: {{ game.get_phase_display }}</li>
-<li>{% trans "Time left" %}: {{ game.next_phase_change|timeuntil }}</li>
-<li>{% trans "Power" %}: {{ player.country }}</li>
-</ul>
-</div>
-<h1>{% trans "Letter" %}</h1>
+{% block actions %}
+<h2>{% trans "Letter" %}</h2>
 
 <dl>
 <dt>{% trans "From" %}:</dt>
